chore(IO) - updated to load files from external file system